--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="row mini-banners">
                 <!--- Card - Projetos Complexos -->
                 <div class="col-12 col-md-4">
-                    <div class="card mb-4" style="width: 18rem;">
+                    <div class="card mb-4" style="height:auto; width:100%;">
                         <div class="card-body">
                             <i class="bi bi-box card-icon"></i>
                             <h5 class="card-title">Projetos Complexos</h5>
@@ -121,7 +121,7 @@
 
                 <!--Card - Você participa também-->
                 <div class="col-12 col-md-4">
-                    <div class="card mb-4" style="width: 18rem;">
+                    <div class="card mb-4"  style="height:auto; width:100%;">
                         <div class="card-body">
                             <i class="bi bi-stack card-icon"></i>
                             <h5 class="card-title">Você participa também</h5>
@@ -133,7 +133,7 @@
 
                 <!--Card - Adiantamento de entregas-->
                 <div class="col-12 col-md-4">
-                    <div class="card mb-4" style="width: 18rem;">
+                    <div class="card mb-4"  style="height:100%; width:100%;">
                         <div class="card-body">
                             <i class="bi bi-lightning-charge card-icon"></i>
                             <h5 class="card-title">Adiantamento de entregas</h5>
@@ -154,21 +154,21 @@
         <div class="col-12 mb-5">
             <div class="row g-4">
                 <div class="col-12 col-md-4 img-projects" id="img-projects">
-                    <img class="img-fluid" src="img/project-1.jpg" alt="project1">
+                    <img class="img-fluid"  style="height:100%; width:100%;" src="img/project-1.jpg" alt="project1">
                     <div class="img-caption">
                         <h6>Categoria</h6>
                         <h3>Nome do Projeto</h3>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 img-projects" id="img-projects">
-                    <img class="img-fluid" style="height:535px;" src="img/project-2.jpg" alt="project1">
+                    <img class="img-fluid" style="height:100%; width:100%;" src="img/project-2.jpg" alt="project2">
                     <div class="img-caption">
                         <h6>Categoria</h6>
                         <h3>Nome do Projeto</h3>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 img-projects" id="img-projects">
-                    <img class="img-fluid" style="height:535px;" src="img/project-3.jpg" alt="project1">
+                    <img class="img-fluid" style="height:100%; width:100%;" src="img/project-3.jpg" alt="project3">
                     <div class="img-caption">
                         <h6>Categoria</h6>
                         <h3>Nome do Projeto</h3>
@@ -178,21 +178,21 @@
 
             <div class="row g-4 mt-4">
                 <div class="col-12 col-md-4 img-projects" id="img-projects">
-                    <img class="img-fluid" src="img/project-4.jpg" alt="project1">
+                    <img class="img-fluid"  style="height:100%; width:100%;" src="img/project-4.jpg" alt="project4">
                     <div class="img-caption">
                         <h6>Categoria</h6>
                         <h3>Nome do Projeto</h3>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 img-projects" id="img-projects">
-                    <img class="img-fluid" src="img/project-5.jpg" alt="project1">
+                    <img class="img-fluid"  style="height:100%; width:100%;" src="img/project-5.jpg" alt="project5">
                     <div class="img-caption">
                         <h6>Categoria</h6>
                         <h3>Nome do Projeto</h3>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 img-projects" id="img-projects">
-                    <img class="img-fluid" style="height:537px;" src="img/project-6.jpg" alt="project1">
+                    <img class="img-fluid"  style="height:100%; width:100%;" src="img/project-6.jpg" alt="project6">
                     <div class="img-caption">
                         <h6>Categoria</h6>
                         <h3>Nome do Projeto</h3>
@@ -202,7 +202,7 @@
         </div>
 
         <!--- Detalhes Importantes-title -->
-        <div class="row mb-4 detalhes" id="sobre">
+        <div class="row  detalhes" id="sobre">
             <h2 class="destaque-title">Detalhes Importantes</h2>
             <h6 class="destaque-subtitle">Saiba mais sobre a experiência da nossa incrível equipe</h6>
         </div>
@@ -211,7 +211,7 @@
         <div class="col-12 mb-5">
             <div class="row g-4">
                 <div class="col-12 col-md-5">
-                    <img class="img-fluid mt-5 pt-3" src="img/infobanner.jpg" alt="">
+                    <img class="img-fluid mt-3 pt-3" src="img/infobanner.jpg" alt="">
                 </div>
 
                 <div class="col-12 col-md-7 ">
@@ -287,12 +287,12 @@
                             <div class="col-6 links">
                                 <a href="#" class="text-secondary"><span>Projetos</span></a><br>
                                 <a href="#" class="text-secondary"><span>Imóveis</span></a><br>
-                                <a href="#" class="text-secondary"><span>Vendas</span></a>
+                                <a href="#" class="text-secondary"><span>Vendas</span></a><br>
                             </div>
                             <div class="col-6 links">
-                                <a href="#" class="text-secondary"><span>Contratar</span></a>
-                                <a href="#" class="text-secondary"><span>Trabalhe Conosco</span></a>
-                                <a href="#" class="text-secondary"><span>Contato</span></a>
+                                <a href="#" class="text-secondary"><span>Contratar</span></a><br>
+                                <a href="#" class="text-secondary"><span>Trabalhe Conosco</span></a><br>
+                                <a href="#" class="text-secondary"><span>Contato</span></a><br>
                             </div>
                         </div>
                     </div>
